example/web/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-1
spec:
  rules:
    # expands DOMAIN env
    - host: web.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
